my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WUNUSEDDEFAULT_01/WUNUSEDDEFAULT_01.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:35:9: warning WUNUSEDDEFAULT: unused: read methods are not called automatically for register objects in b.r0.read
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:37:9: warning WUNUSEDDEFAULT: unused: write methods are not called automatically for register objects in b.r0.write
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:26:13: warning WUNUSEDDEFAULT: unused: after_get methods are not called automatically for field objects in b.r0.f.after_get
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:30:13: warning WUNUSEDDEFAULT: unused: after_hard_reset methods are not called automatically for field objects in b.r0.f.after_hard_reset
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:18:13: warning WUNUSEDDEFAULT: unused: after_read methods are not called automatically for field objects in b.r0.f.after_read
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:22:13: warning WUNUSEDDEFAULT: unused: after_set methods are not called automatically for field objects in b.r0.f.after_set
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:32:13: warning WUNUSEDDEFAULT: unused: after_soft_reset methods are not called automatically for field objects in b.r0.f.after_soft_reset
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:14:13: warning WUNUSEDDEFAULT: unused: after_write methods are not called automatically for field objects in b.r0.f.after_write
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:28:13: warning WUNUSEDDEFAULT: unused: before_get methods are not called automatically for field objects in b.r0.f.before_get
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:20:13: warning WUNUSEDDEFAULT: unused: before_read methods are not called automatically for field objects in b.r0.f.before_read
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:24:13: warning WUNUSEDDEFAULT: unused: before_set methods are not called automatically for field objects in b.r0.f.before_set
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WUNUSEDDEFAULT_01.dml:16:13: warning WUNUSEDDEFAULT: unused: before_write methods are not called automatically for field objects in b.r0.f.before_write
